# linux-mod-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.cursor/skills/linux-mod-manager/: SKILL.md  architecture.md  nexus-api.md  roadmap.md
.github/workflows/: ci.yml  codeql.yml
docs/: commands.md
src/lmm/: __init__.py  archive.py  cli.py  config.py  deploy.py  doctor.py  io.py  library.py  logging_config.py  paths.py  state.py
src/lmm/nexus/: __init__.py  client.py  link.py  updates.py  updates_hash.py
tests/: conftest.py  helpers.py  test_archive.py  test_cli.py  test_config.py  test_deploy.py  test_deploy_cli.py  test_doctor.py  test_game_target.py  test_io.py  test_library.py  test_library_update.py  test_logging_config.py  test_mod_name_add.py  test_nexus_cli.py  test_nexus_client.py  test_nexus_link.py  test_nexus_updates.py  test_path_safety.py  test_paths.py  test_state.py
tests/fixtures/: nexus.py
