[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-mod-manager"
version = "1.0.0"
description = "Personal CLI mod manager for games on Linux and mods in Nexus Mods"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Aapok0" }]
keywords = ["mods", "nexus", "linux", "gaming", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13",
    "rich>=15.0",
    "tomli-w>=1.2",
    "typer>=0.26",
]

[project.urls]
Homepage = "https://github.com/Aapok0/linux-mod-manager"
Repository = "https://github.com/Aapok0/linux-mod-manager"
Changelog = "https://github.com/Aapok0/linux-mod-manager/blob/main/CHANGELOG.md"
Issues = "https://github.com/Aapok0/linux-mod-manager/issues"

[project.optional-dependencies]
dev = [
    "pip-tools>=7.5,<8",
    "pytest>=9.1",
    "pytest-cov>=6,<7",
    "ruff>=0.15,<0.16",
    "ty>=0.0.56,<0.1",
]

[project.scripts]
lmm = "lmm.cli:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["lmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "unit: pure function/service tests, no CliRunner",
    "integration: CliRunner or multi-command CLI bootstrap",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["src"]
